--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   font-family: "Noto Sans KR", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  max-width: 1080px;
+  margin: 0 auto;
 }
 
 .blue {
@@ -24,4 +26,12 @@ a {
 
 .hidden {
   display: none;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.flex {
+  display: flex;
 }
