--- a/src/style.css
+++ b/src/style.css
@@ -912,6 +912,15 @@
   cursor: pointer;
 }
 
+.services-page .content-wrap > div:hover {
+  background-color: #f3f4f8;
+}
+
+.services-page .content-wrap > div:hover .fold-img {
+  content: url(../src/assets/images/icons/up01.png);
+  transform: rotate(90deg);
+}
+
 .services-page .content-wrap > div .title {
   padding: 20px;
   display: flex;
@@ -929,15 +938,16 @@
 }
 
 .services-page .content-wrap > div .title img {
+  transform: rotate(-90deg);
   width: 24px;
 }
 
 .services-page .content-wrap > div > .fold-wrap {
-  margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
-  margin: 15px 0;
+  padding: 15px 0;
+  background-color: #fff;
 }
 
 .services-page .content-wrap > div > .fold-wrap a {
@@ -1014,9 +1024,14 @@
   width: 100%;
 }
 
+.services-detail-page .sub-title-ment {
+  margin: 5%;
+}
+
 .services-detail-page .content-wrap {
   display: flex;
   width: 100%;
+  align-items: flex-start;
 }
 
 .services-detail-page .content-wrap .content-left {
@@ -1039,12 +1054,13 @@
 
 .services-detail-page .content-wrap .content-left .members {
   padding: 5% 0 5% 10%;
+  height: 100%;
 }
 
 .services-detail-page .content-wrap .content-left .members .members-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10%;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
 }
 
 .services-detail-page .content-wrap .content-left .members .members-grid img {
@@ -1074,7 +1090,11 @@
 }
 
 .services-detail-page .content-wrap .content-left .members .p3 {
+  border: 1px solid #d9d9d9;
+  color: #999999;
   font-size: 0.8em;
+  width: fit-content;
+  padding: 0 5px;
 }
 
 .services-detail-page
@@ -1089,6 +1109,57 @@
 
 .services-detail-page .content-wrap .content-left .members .p4 {
   font-size: 0.8em;
+}
+
+.services-detail-page .toggle-button-wrap {
+  padding: 5% 0 5% 10%;
+}
+
+.services-detail-page .toggle-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  color: #999999;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  position: relative;
+  width: 100%;
+  font-weight: bold;
+}
+
+.services-detail-page .toggle-button img {
+  width: 20px;
+  margin-left: 10px;
+}
+
+.services-detail-page .toggle-button::before,
+.services-detail-page .toggle-button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 40%;
+  height: 1px;
+  background-color: #e0e0e0;
+}
+
+.services-detail-page .toggle-button::before {
+  left: 0;
+}
+
+.services-detail-page .toggle-button::after {
+  right: 0;
+}
+
+.services-detail-page .toggle-button .full-line::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #e0e0e0;
+  margin-top: 10px;
 }
 
 .services-detail-page
@@ -1119,7 +1190,7 @@
   padding: 20px 10px;
   display: flex;
   flex-direction: column;
-  min-height: 300px;
+  min-height: 250px;
 }
 
 .services-detail-page .content-wrap .content-left .recent-news .mark {
@@ -1169,6 +1240,8 @@
 }
 
 .services-detail-page .content-wrap .content-right {
+  position: sticky;
+  top: 100px;
   width: 25%;
   padding-right: 10%;
   margin-left: 5%;
