--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@
 .header .nav ul {
   list-style: none;
   display: flex;
-  gap: 40px;
+  gap: 30px;
   margin: 0;
   padding: 0;
   font-weight: bold;
@@ -58,6 +58,7 @@
   text-decoration: none;
   color: #333;
   font-size: 20px;
+  width: 100%;
 }
 
 .header .nav a:hover {
@@ -237,8 +238,8 @@
 
 .landing-page .main-section .search-icon {
   height: 24px;
-  /* border-left: 1px solid #ccc; */
   padding-left: 10px;
+  cursor: pointer;
 }
 
 .landing-page .main-section .search-input {
@@ -768,6 +769,347 @@
   margin: 50px;
   width: 100%;
   height: 100%;
+}
+
+/* 랜딩 메인 검색 페이지  */
+
+.landing-search-page {
+  padding-top: 72px;
+}
+
+.landing-search-page .process {
+  display: flex;
+  align-items: center;
+  margin: 5% 10%;
+}
+
+.landing-search-page .process img {
+  width: 24px;
+}
+
+.landing-search-page .process span {
+  padding-left: 15px;
+  color: #999999;
+}
+
+.landing-search-page .search-bar-wrap {
+  background-color: #f9f9f9;
+  padding: 5% 25%;
+}
+
+.landing-search-page .search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ccc;
+  background-color: white;
+  padding: 10px;
+  width: 50%;
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.landing-search-page .search-bar input {
+  flex-grow: 1;
+  border: none;
+  padding: 10px;
+  font-size: 0.8em;
+  outline: none;
+  background: transparent;
+}
+
+.landing-search-page .search-bar img {
+  height: 24px;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+.landing-search-page .members-section {
+  padding: 5% 10%;
+}
+
+.landing-search-page .members-section .sub-title {
+  text-align: left;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .members-section .members-wrap {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding: 20px 0;
+}
+
+.landing-search-page .members-section .members-wrap a {
+  text-decoration: none;
+  color: black;
+}
+
+.landing-search-page .members-section .members-wrap .lawyer-item {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.landing-search-page .members-section .members-wrap .lawyer-item img {
+  width: 100%;
+}
+
+.landing-search-page .members-section .members-wrap .lawyer-item .text-wrap {
+  padding: 10px 0;
+}
+
+.landing-search-page .members-section .members-wrap .lawyer-item .text-wrap p {
+  margin: 5px 0;
+}
+
+.landing-search-page
+  .members-section
+  .members-wrap
+  .lawyer-item
+  .text-wrap
+  .p1 {
+  font-weight: bold;
+}
+
+.landing-search-page
+  .members-section
+  .members-wrap
+  .lawyer-item
+  .text-wrap
+  .p2 {
+  color: #666666;
+  font-size: 0.8em;
+}
+
+.landing-search-page
+  .members-section
+  .members-wrap
+  .lawyer-item
+  .text-wrap
+  .p3 {
+  border: 1px solid #d9d9d9;
+  color: #999999;
+  font-size: 0.8em;
+  width: fit-content;
+  padding: 0 5px;
+}
+
+.landing-search-page .members-section .toggle-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  color: #999999;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+  position: relative;
+  width: 100%;
+  font-weight: bold;
+}
+
+.landing-search-page .members-section .toggle-button img {
+  width: 20px;
+  margin-left: 10px;
+}
+
+.landing-search-page .members-section .toggle-button::before,
+.landing-search-page .members-section .toggle-button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 40%;
+  height: 1px;
+  background-color: #e0e0e0;
+}
+
+.landing-search-page .members-section .toggle-button::before {
+  left: 0;
+}
+
+.landing-search-page .members-section .toggle-button::after {
+  right: 0;
+}
+
+.landing-search-page .service-section {
+  padding: 5% 10%;
+  background-color: #f9f9f9;
+}
+
+.landing-search-page .service-section .sub-title {
+  text-align: left;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .news-section01 {
+  padding: 5% 10%;
+}
+
+.landing-search-page .news-section01 .sub-title {
+  text-align: left;
+  display: flex;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .sub-title .more {
+  border: none;
+  background: none;
+  padding-left: 30px;
+  cursor: pointer;
+}
+
+.landing-search-page .sub-title .more img {
+  width: 50px;
+}
+
+.landing-search-page .news-section01 .content .news-item {
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .news-section01 .content .news-item .content {
+  font-size: 0.8em;
+  color: #666666;
+}
+
+.landing-search-page .news-section01 .content .news-item .date {
+  font-size: 0.8em;
+  color: #666666;
+}
+
+.landing-search-page .news-section02 {
+  padding: 5% 10%;
+}
+
+.landing-search-page .news-section02 .sub-title {
+  text-align: left;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .news-section02 .content .news-item {
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .news-section02 .content .news-item .content {
+  font-size: 0.8em;
+  color: #666666;
+}
+
+.landing-search-page .news-section02 .content .news-item .date {
+  font-size: 0.8em;
+  color: #666666;
+}
+
+.landing-search-page .news-section03 {
+  padding: 5% 10%;
+}
+
+.landing-search-page .news-section03 .sub-title {
+  text-align: left;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .news-section03 .content .news-item {
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .news-section03 .content .news-item .content {
+  font-size: 0.8em;
+  color: #666666;
+}
+
+.landing-search-page .news-section03 .content .news-item .date {
+  font-size: 0.8em;
+  color: #666666;
+}
+
+.landing-search-page .newsletter-section {
+  padding: 5% 10%;
+}
+
+.landing-search-page .newsletter-section .sub-title {
+  text-align: left;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.landing-search-page .newsletter-section .content .swiper-container {
+  padding: 5% 0;
+}
+
+.landing-search-page
+  .newsletter-section
+  .content
+  .swiper-container
+  .swiper-wrapper {
+  padding: 5% 0;
+}
+
+.landing-search-page .newsletter-section .content .newsletter-content {
+  border: 2px solid #d9d9d9;
+  border-radius: 5px;
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: column;
+  min-height: 300px;
+}
+
+.landing-search-page .newsletter-section .content .newsletter-content .mark {
+  flex: 2;
+  text-align: left;
+}
+
+.landing-search-page
+  .newsletter-section
+  .content
+  .newsletter-content
+  .mark
+  span {
+  background-color: #1676bc;
+  color: white;
+  width: 100%;
+  padding: 5px 10px;
+}
+
+.landing-search-page .newsletter-section .content .newsletter-content .title {
+  flex: 6;
+  font-weight: bold;
+  text-align: left;
+  font-size: 1em;
+  margin: 0;
+}
+
+.landing-search-page .newsletter-section .content .newsletter-content .bottom {
+  flex: 2;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1em;
+  color: #888;
+}
+
+.landing-search-page
+  .newsletter-section
+  .content
+  .newsletter-content
+  .bottom
+  a {
+  text-decoration: none;
+  color: #888;
+}
+
+.landing-search-page
+  .newsletter-section
+  .content
+  .newsletter-content
+  .bottom
+  .more {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.landing-search-page .newsletter-section .swiper-scrollbar-drag {
+  background: #1676bc;
 }
 
 /* 로벡스 소개 페이지 */
@@ -1300,28 +1642,11 @@
   background-color: white;
 }
 
-.members-page .search-bar .category-select {
-  width: 110px;
-  border: none;
-  background: transparent;
-  font-size: 16px;
-  color: #333;
-  padding: 10px;
-  outline: none;
-  margin-right: 10px;
-  cursor: pointer;
-}
-
-.members-page .search-bar .category-select {
-  flex: 3;
-  font-size: 0.8em;
-}
-
 .members-page .search-bar input {
   flex: 6;
   border: none;
   padding: 10px;
-  font-size: 16px;
+  font-size: 0.8em;
   outline: none;
   background: transparent;
 }
@@ -1332,6 +1657,37 @@
   padding-right: 10px;
   padding-top: 3px;
 }
+
+.members-page .title-section .search-category-wrap {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5% 0;
+}
+
+.members-page .title-section .search-category-wrap button {
+  width: fit-content;
+  border: 1px solid #1676bc;
+  border-radius: 25px;
+  color: #1676bc;
+  background-color: white;
+  padding: 5px 10px;
+  margin: 0 10px;
+  cursor: pointer;
+}
+
+.members-page .title-section .search-category-wrap .active {
+  background-color: #1676bc;
+  color: white;
+}
+
+.members-page .title-section .search-category-wrap button:hover {
+  background-color: #1676bc;
+  color: white;
+}
+
+/* 구성원 */
 
 .members-page .hired-title {
   margin: 5% 10% 2% 10%;
@@ -1419,17 +1775,19 @@
   z-index: -1;
 }
 
+/* 구성원 - 변호사 */
+
 .members-page .lawyer-section {
-  margin: 5% 10%;
+  margin: 5% 0;
   text-align: center;
 }
 
 .members-page .lawyer-section .grid-wrap {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3열 그리드 */
-  grid-auto-rows: minmax(200px, auto); /* 각 행의 높이를 자동 조정 */
-  gap: 20px; /* 각 항목 사이의 간격 */
-  justify-items: center; /* 항목들을 가운데 정렬 */
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(200px, auto);
+  justify-items: center;
+  gap: 150px 0;
 }
 
 .members-page .lawyer-section .lawyer-item:first-child {
@@ -1437,44 +1795,77 @@
 }
 
 .members-page .lawyer-section .lawyer-item {
-  display: flex;
   filter: grayscale(100%);
   transition: filter 0.3s ease;
   position: relative;
   cursor: pointer;
 }
 
+.members-page .lawyer-section .lawyer-item img {
+  width: 100%;
+  max-width: 200px;
+}
 .members-page .lawyer-section .lawyer-item .text-wrap {
   position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.members-page .lawyer-section .lawyer-item .text-wrap p {
-  margin: 0;
-  font-size: 0.8em;
   text-align: left;
 }
 
-.members-page .lawyer-section .lawyer-item .text-wrap .name {
-  font-size: 1em;
-  font-weight: bold;
+.members-page .lawyer-section .lawyer-item .text-wrap p {
+  margin: 5px 0;
+}
+
+.members-page .lawyer-section .lawyer-item .text-wrap .p1 {
+  font-size: 1.2em;
+}
+
+.members-page .lawyer-section .lawyer-item .text-wrap .p1 span:last-child {
+  color: #666666;
+}
+
+.members-page .lawyer-section .lawyer-item .text-wrap .p2 {
+  color: #666666;
+  font-size: 0.8em;
+}
+
+.members-page .lawyer-section .lawyer-item .text-wrap .p3 {
+  border: 1px solid #d9d9d9;
+  color: #999999;
+  font-size: 0.8em;
+  width: fit-content;
+  padding: 0 5px;
 }
 
 .members-page .lawyer-section .selected {
   filter: none;
 }
 
-.members-page .lawyer-section .lawyer-item img {
-  width: 100%;
-  max-width: 200px;
+.members-page .lawyer-section .lawyer-item:hover {
+  filter: none;
+}
+
+.members-page .lawyer-section .lawyer-item:hover .text-wrap {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.3s ease;
+}
+
+.members-page .lawyer-section .lawyer-item .text-wrap {
+  position: absolute;
+  text-align: left;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+}
+.members-page .lawyer-section .lawyer-item.selected .text-wrap {
+  opacity: 1; /* 선택된 변호사 텍스트 노출 */
+  visibility: visible;
 }
 
 .members-page .lawyer-section .toggle-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px auto;
+  margin: 120px auto;
   color: #999999;
   cursor: pointer;
   background-color: transparent;
@@ -1516,76 +1907,6 @@
   background-color: #e0e0e0;
   margin-top: 10px;
 }
-
-/* .members-page .lawyer-section {
-  margin: 5% 10%;
-  text-align: center;
-}
-
-.members-page .lawyer-section .lawyer-title {
-  text-align: left;
-}
-
-.members-page .lawyer-section .lawyer-title span {
-  font-size: 1.5em;
-}
-
-.members-page .lawyer-section .swiper-wrapper {
-  padding: 5% 0;
-}
-
-.members-page .lawyer-section .swiper-slide {
-}
-
-.members-page .lawyer-section .swiper-scrollbar-drag {
-  background: #1676bc;
-}
-
-.members-page .lawyer-section .content {
-  position: relative;
-}
-.members-page .lawyer-section .content img {
-  width: 50%;
-  filter: grayscale(100%);
-}
-
-.members-page .lawyer-section .swiper .swiper-slide-active .img-wrap img {
-  filter: grayscale(0%);
-}
-
-.members-page .lawyer-section .swiper .swiper-slide-active {
-  transform: scale(1.5);
-}
-
-.members-page .lawyer-section .swiper .swiper-slide-active .text-wrap {
-  display: block;
-}
-
-.members-page .lawyer-section .content .text-wrap {
-  display: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-align: left;
-}
-
-.members-page .lawyer-section .content .text-wrap p {
-  margin: 0px;
-}
-
-.members-page .lawyer-section .content .text-wrap .job {
-  font-size: 0.5em;
-}
-
-.members-page .lawyer-section .content .text-wrap .name {
-  font-size: 1.5em;
-  color: #1676bc;
-  font-weight: bold;
-}
-
-.members-page .lawyer-section .content .text-wrap .class {
-  font-size: 0.5em;
-} */
 
 /* 구성원 검색 페이지 */
 
