--- a/src/style.css
+++ b/src/style.css
@@ -356,7 +356,8 @@
   background: none;
   border: none;
   cursor: pointer;
-  margin: 10px;
+  margin: 0;
+  padding: 0;
 }
 
 .landing-page .news-section .content .text-section .nav img {
