fix. 랜딩페이지 애니메이션 추가

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@
   margin: 0 auto;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .blue {
   color: #1676bc;
 }
