--- a/src/Admin.css
+++ b/src/Admin.css
@@ -1,5 +1,209 @@
-.layout {
+/* reset */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  text-decoration: none;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* style */
+.admin-layout {
   font-family: "Noto Sans KR", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  width: "100%";
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+}
+
+.admin-header {
+  position: sticky;
+  padding: 12px 0 12px 48px;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
+
+.admin-contents-layout {
+  display: flex;
+  flex: 1;
+  gap: 30px;
+  margin-bottom: 50px;
+}
+
+.admin-side-bar {
+  padding: 24px 20px 100px 20px;
+  border-right: 1px solid #dfdfdf;
+}
+
+.admin-tab-item {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 14px;
+  padding: 14px 16px;
+}
+
+.admin-tab-item:hover {
+  background-color: #005bac;
+  border-radius: 6px;
+}
+
+.admin-tab-active {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-bottom: 14px;
+  padding: 14px 16px;
+  border-radius: 6px;
+  background-color: #005bac;
+}
+
+.admin-icon-inActive {
+  fill: #333333;
+  width: 24px;
+  height: 24px;
+}
+
+.admin-icon-active {
+  fill: #fff;
+  width: 24px;
+  height: 24px;
+}
+
+.admin-text-inActive {
+  color: #000;
+}
+
+.admin-text-active {
+  color: #fff;
+}
+
+.admin-tab-item:hover .admin-icon-inActive,
+.admin-tab-active:hover .admin-icon-active {
+  fill: #fff; /* hover 시 아이콘 색상 */
+}
+
+.admin-tab-item:hover .admin-text-inActive,
+.admin-tab-active:hover .admin-text-active {
+  color: #fff; /* hover 시 텍스트 색상 */
 }
