--- a/src/Admin.css
+++ b/src/Admin.css
@@ -105,7 +105,8 @@ body {
   line-height: 1;
 }
 ol,
-ul {
+ul,
+li {
   list-style: none;
 }
 blockquote,
@@ -124,20 +125,22 @@ table {
   border-spacing: 0;
 }
 
-/* style */
+/* layout */
 .admin-layout {
   font-family: "Noto Sans KR", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
-  width: "100%";
+  width: 100%;
   height: 100dvh;
   display: flex;
   flex-direction: column;
+  color: #333;
 }
 
 .admin-header {
   position: sticky;
   padding: 12px 0 12px 48px;
+  box-sizing: border-box;
   width: 100%;
   background-color: #fff;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
@@ -146,13 +149,13 @@ table {
 .admin-contents-layout {
   display: flex;
   flex: 1;
-  gap: 30px;
-  margin-bottom: 50px;
 }
 
+/* side-bar */
 .admin-side-bar {
   padding: 24px 20px 100px 20px;
   border-right: 1px solid #dfdfdf;
+  min-width: 203px;
 }
 
 .admin-tab-item {
@@ -206,4 +209,162 @@ table {
 .admin-tab-item:hover .admin-text-inActive,
 .admin-tab-active:hover .admin-text-active {
   color: #fff; /* hover 시 텍스트 색상 */
+}
+
+/* peopleManagement */
+.admin-people-container {
+  padding-top: 30px;
+  padding-left: 30px;
+  padding-right: 109px;
+  width: 100%;
+  background-color: #f5f6fa;
+  padding-bottom: 50px;
+}
+
+.admin-people-title {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.admin-people-position-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 33px;
+}
+
+.admin-people-item {
+  padding: 16px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 14px;
+  height: 100px;
+  min-width: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  color: #333;
+}
+
+.admin-people-item-active {
+  padding: 16px;
+  background-color: #005bac;
+  border: none;
+  cursor: pointer;
+  border-radius: 14px;
+  height: 100px;
+  min-width: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  color: #fff;
+}
+
+.admin-postion-text {
+  opacity: 0.7;
+}
+
+.admin-position-num {
+  text-align: end;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.admin-people-control {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.admin-control-btnwrap {
+  display: flex;
+  gap: 20px;
+}
+
+.admin-control-btn {
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff;
+  background-color: #005bac;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  width: 120px;
+}
+
+.admin-people-searchwrap {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.admin-people-searchbox {
+  padding: 10px 0 10px 14px;
+  border: 1px solid #d9d9d9;
+  font-size: 16px;
+  width: 233px;
+  box-sizing: border-box;
+}
+
+.admin-people-table {
+  width: 100%;
+  margin-top: 20px;
+  border-top: 1px solid #d5d5d5;
+  border-bottom: 1px solid #d5d5d5;
+  background-color: #fff;
+  table-layout: auto; /* 자동 레이아웃으로 설정 */
+}
+
+.admin-table-head th {
+  padding: 20px 0;
+}
+
+.admin-table-body {
+  text-align: center;
+}
+
+.admin-table-body td {
+  padding: 14px 0;
+  vertical-align: middle;
+  border-top: 1px solid #d5d5d5;
+}
+
+.admin-table-image {
+  width: 80px;
+  height: 100px;
+}
+
+.admin-table-edit,
+.admin-table-del {
+  padding: 10px 16px;
+  cursor: pointer;
+}
+
+.admin-table-edit {
+  background-color: #005bac;
+  border-radius: 6px;
+  border: none;
+  color: #fff;
+}
+
+.admin-table-del {
+  background-color: #ededed;
+  border-radius: 6px;
+  border: none;
+  color: #999999;
+}
+
+.admin-table-body td:nth-child(6) {
+  width: 25%;
 }
