--- a/src/Admin.css
+++ b/src/Admin.css
@@ -124,6 +124,17 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox  */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 
 /* layout & common */
 .admin-layout {
@@ -510,4 +521,115 @@ table {
 .admin-next {
   margin-left: 14px;
   cursor: pointer;
+}
+
+.admin-work-contents {
+  width: 1234px;
+  background-color: white;
+  padding: 60px 60px 40px;
+  box-sizing: border-box;
+}
+
+.admin-photo {
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+}
+
+.admin-photo-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.admin-photo-text {
+  font-size: 14px;
+  font-weight: 700;
+  color: #005bac;
+  cursor: pointer;
+}
+
+.admin-word-textarea {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  gap: 10px;
+}
+
+.admin-word-textarea span {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.admin-word-textarea textarea {
+  background-color: #f5f6fa;
+  border: 0.6px solid #d5d5d5;
+  resize: none;
+  height: 248px;
+  padding: 16px;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.admin-work-inputWrap {
+  margin-top: 20px;
+}
+
+.admin-work-inputWrap span {
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.admin-number-inputWrap {
+  display: flex;
+  align-items: center;
+}
+
+.admin-number-inputWrap span {
+  margin: 0 6px;
+}
+
+.admin-number-input {
+  padding: 6px 16px;
+  width: 69px;
+  height: 36px;
+  border-radius: 4px;
+  border: 1px solid #d5d5d5;
+  background-color: #f5f6fa;
+  box-sizing: border-box;
+  color: #c5c5c5;
+}
+
+.admin-text-input {
+  padding: 6px 16px;
+  border-radius: 4px;
+  height: 36px;
+  border: 1px solid #d5d5d5;
+  background-color: #f5f6fa;
+  box-sizing: border-box;
+  color: #c5c5c5;
+  flex: 1;
+}
+
+.admin-word-exam {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  gap: 10px;
+}
+
+.admin-word-exam span {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.admin-word-exam input {
+  background-color: #f5f6fa;
+  border: 0.6px solid #d5d5d5;
+  resize: none;
+  height: 36px;
+  padding: 16px;
+  box-sizing: border-box;
+  border-radius: 4px;
 }
